force-app/main/default/objects/Candidate__c/fields/Applied_Position__c.field-meta.xml
<CustomField>
    <fullName>Applied_Position__c</fullName>
    <label>Applied Position</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
            <value>
                <fullName>Solution Principal</fullName>
            </value>
            <value>
                <fullName>Principal Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant Manager</fullName>
            </value>
            <value>
                <fullName>Client Service Lead</fullName>
            </value>
            <value>
                <fullName>Practice Area Lead</fullName>
            </value>
            <value>
                <fullName>Client Service Partner</fullName>
            </value>
            <value>
                <fullName>Practice Area Director</fullName>
            </value>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>