force-app/main/default/objects/Candidate__c/fields/Interview_Time__c.field-meta.xml
<CustomField>
    <fullName>Interview_Time__c</fullName>
    <description>This is the day and the time of interview of the candidate.</description>
    <label>Interview Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>