force-app/main/default/objects/Candidate__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User in the org who will be taking the interview.</description>
    <label>Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>