force-app/main/default/objects/Candidate__c/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <label>Practice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Business Advisory Services</fullName>
            </value>
            <value>
                <fullName>Customer Engagement</fullName>
            </value>
            <value>
                <fullName>Data and Analytics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>